cabal-version: 1.12

name:           advent
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cronokirby/advent#readme>
homepage:       https://github.com/cronokirby/advent#readme
bug-reports:    https://github.com/cronokirby/advent/issues
author:         Lúcás Meier
maintainer:     cronokirby@gmail.com
copyright:      2019 Lúcás Meier
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/advent

executable advent
  main-is: Main.hs
  other-modules: Advent
               , Y2018.D1
               , Y2019.D1
               , Y2019.D2
               , Y2019.D3
               , Y2019.D4
               , Y2019.D5
               , Y2019.D6
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , monad-loops
    , relude>=0.5 && <0.6
    , text
    , unordered-containers >=0.2 && <0.3
    , vector
  default-language: Haskell2010
