cabal-version: 1.12

name:           advent
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cronokirby/advent#readme>
homepage:       https://github.com/cronokirby/advent#readme
bug-reports:    https://github.com/cronokirby/advent/issues
author:         Lúcás Meier
maintainer:     cronokirby@gmail.com
copyright:      2020 Lúcás Meier
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/advent

executable advent
  main-is: Main.hs
  other-modules: Advent
               , Ourlude
               , Y2018.D1
               , Y2019.D1
               , Y2019.D2
               , Y2019.D3
               , Y2019.D4
               , Y2019.D5
               , Y2019.D6
               , Y2020.D1
               , Y2020.D2
               , Y2020.D3
               , Y2020.D4
               , Y2020.D5
               , Y2020.D6
               , Y2020.D7
               , Y2020.D8
               , Y2020.D9
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , monad-loops
    , mtl
    , relude>=0.7 && <0.8
    , text
    , unordered-containers >=0.2 && <0.3
    , containers
    , vector
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude, OverloadedStrings
